--- a/Xamarin_Essentials/Xamarin_Essentials/Xamarin_Essentials.csproj
+++ b/Xamarin_Essentials/Xamarin_Essentials/Xamarin_Essentials.csproj
@@ -14,4 +14,15 @@
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991265" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\FlashLightPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
