--- a/Xamarin_Essentials/Xamarin_Essentials/Xamarin_Essentials.csproj
+++ b/Xamarin_Essentials/Xamarin_Essentials/Xamarin_Essentials.csproj
@@ -24,6 +24,9 @@
     <EmbeddedResource Update="Views\FlashLightPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\LocationPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\TextToSpeechPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
