--- a/Xamarin_Essentials/Xamarin_Essentials/Xamarin_Essentials.csproj
+++ b/Xamarin_Essentials/Xamarin_Essentials/Xamarin_Essentials.csproj
@@ -43,5 +43,8 @@
     <EmbeddedResource Update="Views\TextToSpeechPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\VibrationPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
